AC_INIT([Find-PAN], [2.1.1], [W1T3H4Tl@GMAIL.COM])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Set default install prefix
AC_PREFIX_DEFAULT(/usr/local/Find-PAN)

# Check for programs needed (install script)
AC_PROG_INSTALL

# Output files to generate
AC_CONFIG_FILES([
    Makefile
    env.conf])

AC_OUTPUT

